--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,34 @@
         }
     ],
     "repositories": [
-        { "type": "composer", "url": "https://updates.ez.no/ttl" }
+        { "type": "composer", "url": "https://updates.ez.no/ttl" },
+        {
+             "type": "vcs",
+             "url": "https://github.com/ezsystems/date-based-publisher"
+         },
+        {
+             "type": "vcs",
+             "url": "https://github.com/ezsystems/ezplatform-workflow"
+         },
+        {
+             "type": "vcs",
+             "url": "https://github.com/lucasOsti/ezplatform-admin-ui"
+         },
+        {
+             "type": "vcs",
+             "url": "https://github.com/lucasOsti/ezplatform-admin-ui-modules"
+         }
     ],
     "require": {
         "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "ezsystems/date-based-publisher": "^4.0@dev",
+        "ezsystems/date-based-publisher": "dev-EZP-31236-add-tooltips as 4.0.x-dev",
         "ezsystems/doctrine-dbal-schema": "^1.0@dev",
         "ezsystems/ez-support-tools": "^2.0@dev",
-        "ezsystems/ezplatform-admin-ui": "^2.0@dev",
+        "ezsystems/ezplatform-admin-ui": "dev-EZP-31236-add-tooltips as 2.0.x-dev",
         "ezsystems/ezplatform-admin-ui-assets": "^5.0@dev",
-        "ezsystems/ezplatform-admin-ui-modules": "^2.0@dev",
+        "ezsystems/ezplatform-admin-ui-modules": "dev-EZP-31236-added-tooltips-as-new-ui-component as 2.0.x-dev",
         "ezsystems/ezplatform-calendar": "^1.0@dev",
         "ezsystems/ezplatform-core": "^2.0@dev",
         "ezsystems/ezplatform-cron": "^3.0@dev",
@@ -31,7 +47,7 @@
         "ezsystems/ezplatform-http-cache": "^1.0@dev",
         "ezsystems/ezplatform-ee-installer": "^3.0@dev",
         "ezsystems/ezplatform-form-builder": "^2.0@dev",
-        "ezsystems/ezplatform-page-builder": "^2.0@dev",
+        "ezsystems/ezplatform-page-builder": "dev-ezp-31236-tests as 2.0.x-dev",
         "ezsystems/ezplatform-page-fieldtype": "^2.0@dev",
         "ezsystems/ezplatform-matrix-fieldtype": "^2.0@dev",
         "ezsystems/ezplatform-query-fieldtype": "^2.0@dev",
@@ -40,7 +56,7 @@
         "ezsystems/ezplatform-solr-search-engine": "^3.0@dev",
         "ezsystems/ezplatform-standard-design": "^0.3@dev",
         "ezsystems/ezplatform-user": "^2.0@dev",
-        "ezsystems/ezplatform-workflow": "^2.0@dev",
+        "ezsystems/ezplatform-workflow": "dev-EZP-31236-add-tooltips as 2.0.x-dev",
         "ezsystems/ezpublish-kernel": "^8.0@dev",
         "ezsystems/ezplatform-content-forms": "^1.0@dev",
         "ezsystems/ezplatform-content-comparison": "^1.0@dev",
